Source/WebCore/platform/audio/glib/MediaSessionGLib.cpp
@@ -25,6 +25,7 @@
 #include "MediaSessionManagerGLib.h"
 #include <gio/gio.h>
 #include <wtf/SortedArrayMap.h>
+#include <wtf/glib/GUniquePtr.h>
 
 namespace WebCore {
 
